plugins {
    id 'java'
    id 'org.cadixdev.licenser' version '0.6.1'
    id 'io.freefair.lombok' version '6.2.0'
}

final File libs = file('libs')
final String groupAndProject = "$groupId.$projectId"

group groupAndProject
version projectVersion
description 'Halpbot is an annotation based JDA framework designed to reduce boiler plate'

repositories {
    mavenCentral()
    maven {
        url 'https://m2.dv8tion.net/releases'
    }
}

subprojects { Project subProject ->
    apply plugin: 'java'
    apply plugin: 'org.cadixdev.licenser'
    apply plugin: 'io.freefair.lombok'

    group groupAndProject
    version projectVersion

    license {
        header = rootProject.file('LICENSE')
        ignoreFailures = true
        include '**/*.java'
    }

    sourceCompatibility = 17
    targetCompatibility = 17
}

tasks.build {
    dependsOn tasks.updateLicenses
}

allprojects {
    tasks.withType(JavaCompile) {
        options.compilerArgs << '-parameters'
    }

    plugins.withType(JavaPlugin) {
        repositories {
            mavenCentral()
            maven {
                url 'https://m2.dv8tion.net/releases'
            }
        }

        dependencies {
            implementation 'net.dv8tion:JDA:4.3.0_333'
            implementation 'org.checkerframework:checker-qual:3.18.1'

            implementation 'org.reflections:reflections:0.10.2'
            implementation 'org.javassist:javassist:3.28.0-GA'
            implementation 'cglib:cglib:3.3.0'
            implementation 'jakarta.inject:jakarta.inject-api:2.0.1.MR'
            implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

            implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
            implementation 'org.hibernate:hibernate-core:6.0.2.Final'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-properties:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.1'
            implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'

            testImplementation 'org.mockito:mockito-core:4.2.0'
            implementation 'org.apache.derby:derby:10.14.2.0'

            implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
            testImplementation 'ch.qos.logback:logback-classic:1.2.10'

            implementation fileTree(dir: libs, include: '*.jar')
//            implementation 'org.dockbox.hartshorn:hartshorn-core:22.3.1'
//            implementation 'org.dockbox.hartshorn:hartshorn-data:22.3.1'
//            implementation 'org.dockbox.hartshorn:hartshorn-test-suite:22.3.1'
        }

        test {
            useJUnitPlatform()
        }
    }
}